@@ -175,6 +175,7 @@ Release 0.19.0 - Unreleased
                outstanding seqnum is 162297053 fr om region -ROOT-,,0
    HBASE-1055  Better vm stats on startup
    HBASE-1065  Minor logging improvements in the master
+   HBASE-1053  bring recent rpc changes down from hadoop
 
   NEW FEATURES
    HBASE-875   Use MurmurHash instead of JenkinsHash [in bloomfilters]
